--- a/src/acc/libsmm_acc/libcusmm/notebooks/requirements.txt
+++ b/src/acc/libsmm_acc/libcusmm/notebooks/requirements.txt
@@ -12,7 +12,7 @@ Pillow==5.4.1
 pyparsing==2.3.1
 python-dateutil==2.7.5
 pytz==2018.9
-PyYAML==3.13
+PyYAML==4.2b1
 scipy==1.2.0
 seaborn==0.9.0
 six==1.12.0
